src/widgets/graph/snapshots/lazylora__widgets__graph__tests__app_call_with_inner_txns.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                  ①          ②          ③          ④                  "
"       Type    CAL...AA   App #12…   APP...BI   REC...TU              "
"               Account      App      Account    Account               "
"       ────────────┬──────────┬──────────┬──────────┬───              "
"                   │          │          │          │                 "
"         APP       ●──────────▶          │          │    NoOp         "
"        ·PAY ├─    │          │          ●──────────▶    5.00A        "
"        ·AXF └─    │          │          ●──────────▶    500000       "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
