src/widgets/graph/snapshots/lazylora__widgets__graph__tests__asset_config_create.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                      ①                 "
"             Type  CRE...AA             "
"                   Account              "
"             ──────────┬───             "
"                       │                "
"               ACF  ◉config             "
"                                        "
"                                        "
"                                        "
"                                        "
