src/widgets/graph/snapshots/lazylora__widgets__graph__tests__asset_freeze.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                  ①          ②                    "
"         Type  FRE...AA   FRO...TU                "
"               Account    Account                 "
"         ──────────┬──────────┬───                "
"                   │          │                   "
"           AFZ     ●──────────▶    freeze         "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
