src/widgets/graph/snapshots/lazylora__widgets__graph__tests__asset_opt_in.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                           ①                      "
"                  Type  ACC...4A                  "
"                        Account                   "
"                  ──────────┬───                  "
"                            │                     "
"                    AXF ↺opt-in…                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
