src/widgets/graph/snapshots/lazylora__widgets__graph__tests__keyreg_point.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                      ①                 "
"             Type  VAL...LY             "
"                   Account              "
"             ──────────┬───             "
"                       │                "
"               KEY  ◉keyreg             "
"                                        "
"                                        "
"                                        "
"                                        "
