src/widgets/graph/snapshots/lazylora__widgets__graph__tests__payment_with_rekey.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                      ①          ②          ③                         "
"             Type  SEN...4A   REC...TU   NEW...CA                     "
"                   Account    Account    Account                      "
"             ──────────┬──────────┬──────────┬───                     "
"                       │          │          │                        "
"               PAY     ●──────────▶          │    10.00A              "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
