src/widgets/graph/snapshots/lazylora__widgets__graph__tests__real_mainnet_app_call_mixed_inner.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                                       ①          ②          ③                                      "
"                            Type    CAL...4A   App #12…   REC...4A                                  "
"                                    Account      App      Account                                   "
"                            ────────────┬──────────┬──────────┬───                                  "
"                                        │          │          │                                     "
"                              APP       ●──────────▶          │    NoOp                             "
"                             ·PAY ├─    ●───────1.00A─────────▶                                     "
"                             ·AXF └─    ●───────500000────────▶                                     "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
