src/widgets/graph/snapshots/lazylora__widgets__graph__tests__real_mainnet_asset_close_to.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                                   ①          ②                                 "
"                          Type  SEN...4A   REC...TU                             "
"                                Account    Account                              "
"                          ──────────┬──────────┬───                             "
"                                    │          │                                "
"                            AXF     ●──────────▶    0                           "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
