src/widgets/graph/snapshots/lazylora__widgets__graph__tests__real_mainnet_asset_config_create.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                                ①                           "
"                       Type  CRE...4A                       "
"                             Account                        "
"                       ──────────┬───                       "
"                                 │                          "
"                         ACF  ◉config                       "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
