src/widgets/graph/snapshots/lazylora__widgets__graph__tests__real_mainnet_asset_config_reconfigure.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                       ①          ②                         "
"              Type  MAN...4A   ASA #12…                     "
"                    Account     Asset                       "
"              ──────────┬──────────┬───                     "
"                        │          │                        "
"                ACF     ●──────────▶    config              "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
